--- a/manifest.yml
+++ b/manifest.yml
@@ -1,12 +1,8 @@
 ---
 applications:
-- name: springboot
+- name: docker-hello-world-spring-boot
   memory: 512M
   instances: 1
-  path: target/ROOT.jar
-  services:
-    - postgres
+  path: target/hello-world-0.1.0.jar
   env:
     SPRING_PROFILES_DEFAULT: cf
-
-  
